# synergy-studio

./: .gitignore  CMakeLists.txt  LICENSE  fast.py
.github/workflows/: integration.yml
client/: CMakeLists.txt
client/include/: SslClient.h
client/src/: SslClient.cpp  main.cpp
common/: CMakeLists.txt
common/include/synergy_protocol/: MessageFactory.h  Message_Base.h  Message_Join_Session_Request.h  protocol.h
common/src/synergy_protocol/: MessageFactory.cpp  Message_Base.cpp  Message_Join_Session_Request.cpp  protocol.cpp
common/test/: gtest_common_main.cpp
doc/: dev-plan.md  single-file-architecture.md  specification.md  steps.md
scripts/: build.py  run.py
server/: CMakeLists.txt
server/include/: SslServer.h
server/src/: SslServer.cpp  main.cpp
